--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="placeholders">
                 <div class="col-xs-6 col-xs-offset-3 col-sm-3 col-sm-offset-0 col-lg-2 placeholder text-center">
-                    <div class="img-responsive avatar"><div class="initials">{{ Account.get_shaders|length }}</div></div>
+                    <div class="img-responsive avatar"><div class="initials">{{ Account.get_programs|length }}</div></div>
                 </div>
             </div>
             <div class="table-responsive">
@@ -16,28 +16,26 @@
                         <tr>
                             <th>#</th>
                             <th class="text-center">{% _"Name" %}</th>
-                            <th class="text-center">{% _"Type" %}</th>
-                            <th class="text-center">{% _"Edit" %}</th>
+                            <th class="text-center">{% _"Show" %}</th>
                         </tr>
                     </thead>
                     <tbody>
-                        {% for shader in Account.get_shaders %}
+                        {% for program in Account.get_programs %}
                             <tr>
                                 <td>{{ loop.revindex }}</td>
-                                <td class="text-center">{{ shader.get_name }}</td>
-                                <td class="text-center">{{ shader.get_type_display }}</td>
-                                <td class="text-center"><a href="{% url 'account:shader' shader.get_id %}"><span class="fa fa-edit fa-2x"></span></a></td>
+                                <td class="text-center">{{ program.get_name }}</td>
+                                <td class="text-center"><a href="{% url 'program' program.get_id %}"><span class="fa fa-eye fa-2x"></span></a></td>
                             </tr>
                         {% else %}
-                            <tr><td colspan="3" class="text-center">{% _"No shaders, yet!" %}</td></tr>
+                            <tr><td colspan="3" class="text-center">{% _"No programs, yet!" %}</td></tr>
                         {% endfor %}
                     </tbody>
                 </table>
             </div>
             {% if Account.get_user.is_activated %}
-                <a href="{% url 'account:shader' %}">{% _"New shader, please." %}</a>
+                <a href="{% url 'program' 'new' %}">{% _"New program, please." %}</a>
             {% else %}
-                <a href="{% url 'account:activate' %}">{% _"Please activate your account, to create shaders." %}</a>
+                <a href="{% url 'account:activate' %}">{% _"Please activate your account, to create programs." %}</a>
             {% endif %}
         </div>
     </div>
