--- a/templates/index.html
+++ b/templates/index.html
@@ -7,15 +7,39 @@
                     <div class="col-xs-12 text-center">
                         <h1>
                             {{ SITE_NAME }}
-                            
                         </h1>
                     </div>
-                    <div class="col-xs-6 col-xs-offset-3 text-center">
-                        <a href="{% url 'register' %}" class="btn btn-block btn-primary">{% _ "Register" %}</a>
+                    {% if Account.is_logged_in %}
+                    <div class="col-xs-12">
+                        <table class="table table-striped table-vertical-aligned">
+                            <thead>
+                            <tr>
+                                <th>#</th>
+                                <th class="text-center">{% _"Name" %}</th>
+                                <th class="text-center">{% _"Show" %}</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for program in Account.get_programs %}
+                            <tr>
+                                <td>{{ loop.revindex }}</td>
+                                <td class="text-center">{{ program.get_name }}</td>
+                                <td class="text-center"><a href="{% url 'program' program.get_id %}"><span class="fa fa-eye fa-2x"></span></a></td>
+                            </tr>
+                            {% else %}
+                            <tr><td colspan="3" class="text-center">{% _"No programs, yet!" %}</td></tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
                     </div>
-                    <div class="col-xs-6 col-xs-offset-3 text-center"><br>
-                        <a href="{% url 'shader' %}" class="btn btn-block btn-default">{% _ "Shader" %}</a>
+                    {% else %}
+                    <div class="col-xs-3 col-xs-offset-3 text-center">
+                        <a href="{% url 'login' %}" class="btn btn-block btn-primary">{% _ "Login" %}</a>
                     </div>
+                    <div class="col-xs-3 text-center">
+                        <a href="{% url 'register' %}" class="btn btn-block btn-default">{% _ "Register" %}</a>
+                    </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
