--- a/static/css/main.css
+++ b/static/css/main.css
@@ -124,6 +124,15 @@ h1, h2, h3, h4, h5, h6 {
     z-index: 1;
 }
 
+.resizable {
+    position: absolute;
+    height: 300px;
+}
 .ace_editor {
-    height: 200px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 100%;
 }
