--- a/templates/__base.html
+++ b/templates/__base.html
@@ -22,6 +22,7 @@
     <![endif]-->
     <script src="/static/js/jquery-1.11.2.min.js"></script>
     <script src="/static/js/jquery-ui.min.js"></script>
+    <script src="/static/js/ace/ace.js" type="text/javascript" charset="utf-8"></script>
     <script src="/static/js/lare.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
     <script src="/static/js/toastr.min.js"></script>
