restriction and starting to prepare post processing

--- a/templates/__base.html
+++ b/templates/__base.html
@@ -27,6 +27,14 @@
     <script src="/static/js/bootstrap.min.js"></script>
     <script src="/static/js/toastr.min.js"></script>
     <script src="/static/js/three.min.js"></script>
+    <script src="/static/js/shaders/CopyShader.js"></script>
+    <script src="/static/js/shaders/DotScreenShader.js"></script>
+    <script src="/static/js/shaders/RGBShiftShader.js"></script>
+    <script src="/static/js/postprocessing/EffectComposer.js"></script>
+    <script src="/static/js/postprocessing/RenderPass.js"></script>
+    <script src="/static/js/postprocessing/MaskPass.js"></script>
+    <script src="/static/js/postprocessing/ShaderPass.js"></script>
+
 </head>
 <body data-lare-namespace="{{ lare_current_namespace }}">
     {% block site %}
