--- a/templates/__base.html
+++ b/templates/__base.html
@@ -27,6 +27,7 @@
     <script src="/static/js/bootstrap.min.js"></script>
     <script src="/static/js/toastr.min.js"></script>
     <script src="/static/js/three.min.js"></script>
+    <script src="/static/js/geometry/TeapotGeometry.js"></script>
     <script src="/static/js/shaders/CopyShader.js"></script>
     <script src="/static/js/shaders/DotScreenShader.js"></script>
     <script src="/static/js/shaders/RGBShiftShader.js"></script>
