--- a/static/css/main.css
+++ b/static/css/main.css
@@ -54,8 +54,8 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
 }
 .navbar-brand img {
-  max-height: 45px;
-  margin-top: -12px;
+  max-height: 40px;
+  margin-top: -10px;
 }
 #footer {
   position: relative;
@@ -67,10 +67,10 @@ h1, h2, h3, h4, h5, h6 {
   border-top: 1px solid #080808;
   padding-top: 18px;
   text-align: right;
-  color: #fff;
+  color: #9d9d9d;
 }
 #footer a, #footer a:visited {
-  color: #fff;
+  color: #9d9d9d;
 }
 #footer a:hover {
   color: #ccc;
