--- a/templates/__base.html
+++ b/templates/__base.html
@@ -41,7 +41,7 @@
     {% block site %}
     <div id="site">
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#webapp-navbar">
                         <span class="sr-only">{% _"Toggle navigation" %}</span>
@@ -49,7 +49,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/">STFU</a>
+                    <a class="navbar-brand" href="/"><img src="/static/img/stfu.png"></a>
                 </div>
                 <ul id="webapp-navbar" class="nav navbar-nav navbar-collapse collapse navbar-right">
                     {% include "_include/_navbar.html" %}
@@ -78,7 +78,7 @@
     <script src="/static/js/main.js"></script>
     </div>
     <footer id="footer">
-        <div class="container">
+        <div class="container-fluid">
             <p><a href="{% url 'imprint' %}">{% _"Imprint" %}</a> | by a few people</p>
         </div>
     </footer>
