--- a/templates/_include/_shader_pass.html
+++ b/templates/_include/_shader_pass.html
@@ -1,5 +1,5 @@
 
-<div class="well" style="background-color: #fff;">
+<div class="well" style="background-color: #fff;" id="shaderpass_{{ shaderPass.get_id }}">
     <a data-toggle="collapse" href="#shader_{{ shaderPass.get_shader.get_id }}_wrapper"><h4>{{ shaderPass.get_shader.get_name }}</h4></a>
     <div class="form-group collapse ace-wrapper" id="shader_{{ shaderPass.get_shader.get_id }}_wrapper">
         <input type="text" class="form-control" name="name" value="{{ shaderPass.get_shader.get_name }}" style="background-color: rgb(39, 40, 34); color: #f7f7f7;">
@@ -9,5 +9,6 @@
         <div class="resizable resizable_snippet_{{ shaderPass.get_shader.get_fragment_id }}"><div id="snippet_{{ shaderPass.get_shader.get_fragment_id }}" class="form-control ace_editor fragment" data-mode="glsl">{{ shaderPass.get_shader.get_fragment.get_code|raw }}</div></div>
         <a href="#" class="btn btn-default save-shader save" data-id="{{ shaderPass.get_shader.get_id }}">{% _"save" %} (Ctrl-S)</a>
         <a href="#" class="btn btn-default preview-shader preview">{% _"preview" %} (Ctrl-D)</a>
+        <a href="#" class="btn btn-danger delete-shader-pass" data-id="{{ shaderPass.get_id }}">{% _"delete" %}</a>
     </div>
 </div>
