--- a/templates/program.html
+++ b/templates/program.html
@@ -10,9 +10,9 @@
                     <div class="form-group ace-wrapper" id="program_{{ Program.get_id }}_wrapper">
                         <input type="text" class="form-control" name="name" value="{{ Program.get_name }}" style="background-color: rgb(39, 40, 34); color: #f7f7f7;">
                         <select name="object_type" id="object_type" class="form-control">
+                            <option value="torus" {% if Program.get_object_type_display == 'torus' %}selected{% endif %}>{% _"Torus Knot" %}</option>
                             <option value="sphere" {% if Program.get_object_type_display == 'sphere' %}selected{% endif %}>{% _"Sphere" %}</option>
                             <option value="cube" {% if Program.get_object_type_display == 'cube' %}selected{% endif %}>{% _"Cube" %}</option>
-                            <option value="torus" {% if Program.get_object_type_display == 'torus' %}selected{% endif %}>{% _"Torus Knot" %}</option>
                             <option value="teapot" {% if Program.get_object_type_display == 'teapot' %}selected{% endif %}>{% _"Teapot" %}</option>
                         </select>
                         <a href="#" class="btn btn-default save-program save" data-id="{{ Program.get_id }}">{% _"save" %} (Ctrl-S)</a>
@@ -86,7 +86,7 @@
 
         var shader_passes = [];
         {% for shaderPass in Program.get_shader_passes %}
-        shader_passes.push({'vertex_id': '{{ shaderPass.get_shader.get_vertex_id }}','fragment_id': '{{ shaderPass.get_shader.get_fragment_id }}'});
+        shader_passes.push({'id': '{{ shaderPass.get_id }}', 'vertex_id': '{{ shaderPass.get_shader.get_vertex_id }}','fragment_id': '{{ shaderPass.get_shader.get_fragment_id }}'});
         {% endfor %}
 
         var uniforms = {};
@@ -131,8 +131,11 @@
                 case 'teapot':
                     geometry = new THREE.TeapotGeometry(0.3, 10, true, true, true, true);
                     break;
-                default:
+                case 'cube':
                     geometry = new THREE.BoxGeometry( 1, 1, 1 );
+                    break;
+                default:
+                    geometry = new THREE.TorusKnotGeometry( 0.3, 0.1, 1000, 54 );
             }
             var mesh = new THREE.Mesh( geometry, material );
             scene.add( mesh );
@@ -220,5 +223,22 @@
         });
 
     </script>
+    <div class="modal fade" tabindex="-1" role="dialog" id="delete-modal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Please choose</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Are you sure you want to delete this?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">{% _"No" %}</button>
+                    <button type="button" class="btn btn-danger confirm-delete">{% _"Yes" %}</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock page %}
