--- a/templates/program.html
+++ b/templates/program.html
@@ -49,7 +49,7 @@
                 <div class="col-xs-12">
                     <div class="well">
                         <a data-toggle="collapse" href="#shader_{{ Program.get_material.get_id }}_wrapper"><h4>Material</h4></a>
-                        <div class="form-group ace-wrapper" id="shader_{{ Program.get_material.get_id }}_wrapper">
+                        <div class="form-group ace-wrapper collapse in" id="shader_{{ Program.get_material.get_id }}_wrapper">
                             <input type="text" class="form-control" name="name" value="{{ Program.get_material.get_name }}" style="background-color: rgb(39, 40, 34); color: #f7f7f7;">
                             <label for="snippet_{{ Program.get_material.get_vertex_id }}">Vertex</label>
                             <div class="resizable resizable_snippet_{{ Program.get_material.get_vertex_id }}"><div id="snippet_{{ Program.get_material.get_vertex_id }}" class="form-control ace_editor vertex" data-mode="glsl">{{ Program.get_material.get_vertex.get_code|raw }}</div></div>
@@ -77,7 +77,7 @@
         </div>
     </div>
     <div id="render_plane" style="height: 100%; position: fixed; width: 50%; right: 0; top:0"></div>
-
+    <script src="/static/js/souch.js"></script>
     <script>
         var container;
 
