--- a/templates/__base.html
+++ b/templates/__base.html
@@ -76,6 +76,7 @@
         }(window.WebApp = window.WebApp || {}, jQuery));
     </script>
     <script src="/static/js/main.js"></script>
+        <script src="/static/js/souch.js"></script>
     </div>
     <footer id="footer">
         <div class="container-fluid">
@@ -83,5 +84,22 @@
         </div>
     </footer>
     {% endblock site %}
-<div id="additional_lare_includes"></div></body>
+<div id="additional_lare_includes"></div>
+    <div class="modal fade" tabindex="-1" role="dialog" id="delete-modal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Please choose</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Are you sure you want to delete this?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">{% _"No" %}</button>
+                    <button type="button" class="btn btn-danger confirm-delete">{% _"Yes" %}</button>
+                </div>
+            </div>
+        </div>
+    </div></body>
 </html>
