better routing and refactoring

--- a/templates/__base.html
+++ b/templates/__base.html
@@ -84,7 +84,7 @@
         </div>
     </footer>
     {% endblock site %}
-<div id="additional_lare_includes"></div>
+    <div id="additional_lare_includes"></div>
     <div class="modal fade" tabindex="-1" role="dialog" id="delete-modal">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -101,5 +101,6 @@
                 </div>
             </div>
         </div>
-    </div></body>
+    </div>
+    </body>
 </html>
